fixed double border

--- a/src/components/Accordion/accordion.scss
+++ b/src/components/Accordion/accordion.scss
@@ -1,3 +1,9 @@
+@mixin last-child($selector) {
+  & #{$selector}:last-child {
+    @content;
+  }
+}
+
 .accordionMenuContainer {
   height: 100vh;
   display: flex;
@@ -17,6 +23,9 @@
   flex: 1;
   display: flex;
   flex-direction: row;
+  @include last-child('.slideContainer') {
+    border-right: 1px solid #7d7d7d;
+  }
 }
 
 @media (max-width: 768px) {
@@ -27,7 +36,9 @@
 
 .slideContainer {
   padding: 15px;
-  border: 1px solid #7d7d7d;
+  border-left: 1px solid #7d7d7d;
+  border-top: 1px solid #7d7d7d;
+  border-bottom: 1px solid #7d7d7d;
   display: grid;
   grid-template-columns: 10% 80% 10%;
 
@@ -45,8 +56,10 @@
 
     &:hover {
       cursor: pointer;
+
       .contentAndTitle, div {
         color: #19a0ff;
+
         .title {
           &.inactive {
             a {
@@ -79,7 +92,7 @@
       a:link,
       a:visited,
       a:active {
-        transition: .5s;
+        transition: color .5s;
         font-size: 1.2rem;
         text-decoration: none;
         color: #7d7d7d;
@@ -96,8 +109,10 @@
     flex: 1;
     display: grid;
     grid-template-rows: 1fr 1fr 1fr;;
+
     .contentAndTitle {
       grid-row-start: 2;
+
       .title {
         text-align: right;
         transform: none;
